chore: fix overflow bug with justify-content: center

--- a/extensions/chrome/public/styles.css
+++ b/extensions/chrome/public/styles.css
@@ -80,12 +80,22 @@ body {
 }
 
 .margin-bottom {
-  /* Read the following stackoverflow answers to figure out how to center the quotes without overflowing */
-  /* https://stackoverflow.com/questions/33454533/cant-scroll-to-top-of-flex-item-that-is-overflowing-container */
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 .paragraph-wrapper {
   padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  /* 
+   For some reason applying `justify-content: space-between` or `justify-content: space-around` results
+   in some content being cut off even when there is a scroll bar. The following stackoverflow answers 
+   why an overflow occurs in such situations.
+   https://stackoverflow.com/questions/33454533/cant-scroll-to-top-of-flex-item-that-is-overflowing-container  
+   */
+
+  justify-content: center;
+  align-items: stretch;
+  min-height: 100%;
 }
 .paragraph-wrapper:focus {
   outline: var(--focus);
